--- a/wews/Main/Main.html
+++ b/wews/Main/Main.html
@@ -16,7 +16,18 @@
             <i class="fas fa-shopping-cart"></i> Cart
             <span id="cart-counter" class="badge badge-pill badge-warning">0</span>
         </button>
-    </nav>
+
+        <!-- User Dropdown -->
+        <div class="dropdown ml-2">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="userDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="fas fa-user"></i> User
+            </button>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="#">View Profile</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#" id="logoutButton">Logout</a>
+            </div>
+        </div>
     </nav>
 
     <!-- Banner Section -->
@@ -35,6 +46,8 @@
                         <h2 class="card-title">Original Flavor</h2>
                         <p class="card-text">Enjoy the classic taste of kangkong chips with our original flavor.</p>
                         <button class="btn btn-primary add-to-cart" data-product="Original Flavor">Add to Cart</button>
+                        <!-- Button to trigger modal -->
+                        <button type="button" class="btn btn-info" data-toggle="modal" data-target="#infoModalOriginalFlavor">View Info</button>
                     </div>
                 </div>
             </div>
@@ -43,8 +56,10 @@
                     <img src="../assets/SOUR-CREAM.jpg" class="card-img-top" alt="Kangkong Chip 1">
                     <div class="card-body">
                         <h2 class="card-title">Sour Cream</h2>
-                        <p class="card-text">Enjoy the Sour Creamtaste of kangkong chips with our original flavor.</p>
+                        <p class="card-text">Enjoy the Sour Cream taste of kangkong chips with our original flavor.</p>
                         <button class="btn btn-primary add-to-cart" data-product="Sour Cream">Add to Cart</button>
+                        <!-- Button to trigger modal -->
+                        <button type="button" class="btn btn-info" data-toggle="modal" data-target="#infoModalSourCream">View Info</button>
                     </div>
                 </div>
             </div>
@@ -55,44 +70,112 @@
                         <h2 class="card-title">Cheese</h2>
                         <p class="card-text">Enjoy the Cheese taste of kangkong chips with our original flavor.</p>
                         <button class="btn btn-primary add-to-cart" data-product="Cheese">Add to Cart</button>
+                        <!-- Button to trigger modal -->
+                        <button type="button" class="btn btn-info" data-toggle="modal" data-target="#infoModalCheese">View Info</button>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-<div class="modal" id="cartModal" tabindex="-1" role="dialog">
+    
+    <!-- Modals -->
+    <!-- Modals -->
+<div class="modal fade" id="infoModalOriginalFlavor" tabindex="-1" role="dialog" aria-labelledby="infoModalOriginalFlavorLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title">Shopping Cart</h5>
+                <h5 class="modal-title" id="infoModalOriginalFlavorLabel">Original Flavor Details</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <ul id="cart-items-modal" class="list-group">
-                    <!-- Cart items will be added -->
-                </ul>
-                <h5>Total: $<span id="cart-total-modal">0.00</span></h5>
+                <img src="../assets/kangkong_chip_image1.jpg" class="img-fluid" alt="Original Flavor">
+                <p>Enjoy the classic taste of kangkong chips with our original flavor.</p>
+                <p>Price: $5.99</p>
+                <!-- Add more details as needed -->
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-primary checkout" data-dismiss="modal">Checkout</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
             </div>
         </div>
     </div>
 </div>
 
-    <!-- Footer -->
-    <footer class="bg-dark text-white text-center py-3">
-        <p>&copy; 2023 Kangkong Chips Shop</p>
-    </footer>
+<div class="modal fade" id="infoModalSourCream" tabindex="-1" role="dialog" aria-labelledby="infoModalSourCreamLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="infoModalSourCreamLabel">Sour Cream Details</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <img src="../assets/SOUR-CREAM.jpg" class="img-fluid" alt="Sour Cream">
+                <p>Enjoy the Sour Cream taste of kangkong chips with our original flavor.</p>
+                <p>Price: $6.99</p>
+                <!-- Add more details as needed -->
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
 
-    <!-- Bootstrap -->
+<div class="modal fade" id="infoModalCheese" tabindex="-1" role="dialog" aria-labelledby="infoModalCheeseLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="infoModalCheeseLabel">Cheese Details</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <img src="../assets/CHEESE.jpg" class="img-fluid" alt="Cheese">
+                <p>Enjoy the Cheese taste of kangkong chips with our original flavor.</p>
+                <p>Price: $7.99</p>
+                <!-- Add more details as needed -->
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+    </div>
+</div>
+    <!-- Cart Modal -->
+    <div class="modal" id="cartModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Shopping Cart</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <ul id="cart-items" class="list-group">
+                        <!-- Cart items will be added dynamically -->
+                    </ul>
+                    <h5>Total: $<span id="cart-total">0.00</span></h5>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary checkout" data-dismiss="modal">Checkout</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    
+
+    <!-- Bootstrap and Font Awesome -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+ 
 
-    <!--  JavaScript  -->
+    <!-- JavaScript -->
     <script src="Main.js"></script> 
 </body>
 </html>
