--- a/wews/Main/Main.html
+++ b/wews/Main/Main.html
@@ -23,7 +23,7 @@
                 <i class="fas fa-user"></i> User
             </button>
             <div class="dropdown-menu">
-                <a class="dropdown-item" href="#">View Profile</a>
+                <a class="dropdown-item" href="../UserInfo/UInfo.html">View Profile</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#" id="logoutButton">Logout</a>
             </div>
