--- a/wews/Welcome/Welcome.html
+++ b/wews/Welcome/Welcome.html
@@ -81,10 +81,7 @@
         <a href="../Main/Main.html" class="btn btn-primary btn-lg my-3">Explore Our Shop</a>
     </div>
 
-
-
-
-    <div class="container-fluid" >
+    <div class="container-fluid" style="height: 800px; background: white;">
 
         <div class="container position-sticky my-4">
 
@@ -120,36 +117,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-
-    </div>
-
-    <div class="container-fluid">
-
-        <div class="container">
-            
-            <div class="row">
-                <div class="col-lg-4">
-                    <div class="card mb-4">
-                        <img src="../assets/kangkong_chip_image1.jpg" class="card-img-top" alt="Kangkong Chip 1">
-                        <div class="card-body">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="card mb-4">
-                        <img src="../assets/SOUR-CREAM.jpg" class="card-img-top" alt="Kangkong Chip 1">
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="card mb-4">
-                        <img src="../assets/CHEESE.jpg" class="card-img-top" alt="Kangkong Chip 1">
-                        </div>
-                    </div>
-                </div>
-            </div>
-
         </div>
 
     </div>
