--- a/wews/Welcome/Welcome.html
+++ b/wews/Welcome/Welcome.html
@@ -80,7 +80,24 @@
         <p class="lead">Satisfy your cravings with our crispy and flavorful kangkong chips.</p>
         <a href="../Main/Main.html" class="btn btn-primary btn-lg my-3">Explore Our Shop</a>
     </div>
-
+        <div class="row">
+            <div class="col-lg-4">
+                <div class="card mb-4">
+                    <img src="../assets/kangkong.png" class="card-img-top" alt="Kangkong Chip 1">
+                    <div class="card-body">
+                    </div>
+                </div>
+            </div> <div class="col-lg-4">
+                <div class="card mb-4">
+                        <h1>Nutrition Facts
+                        </h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+           
+         
+  
     <div class="container-fluid" style="height: 800px; background: white;">
 
         <div class="container position-sticky my-4">
