may mga ginawa ko

--- a/wews/Main/Main.html
+++ b/wews/Main/Main.html
@@ -11,7 +11,7 @@
 
     <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Kangkong Chips Shop</a>
+        <a class="navbar-brand" href="#"><img src="../assets/logo.png" alt="Logo"></a>
         <button class="btn btn-outline-light my-2 my-sm-0 ml-auto" data-toggle="modal" data-target="#cartModal">
             <i class="fas fa-shopping-cart"></i> Cart
             <span id="cart-counter" class="badge badge-pill badge-warning">0</span>
@@ -79,7 +79,6 @@
     </div>
     
     <!-- Modals -->
-    <!-- Modals -->
 <div class="modal fade" id="infoModalOriginalFlavor" tabindex="-1" role="dialog" aria-labelledby="infoModalOriginalFlavorLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
         <div class="modal-content">
@@ -91,8 +90,13 @@
             </div>
             <div class="modal-body">
                 <img src="../assets/kangkong_chip_image1.jpg" class="img-fluid" alt="Original Flavor">
-                <p>Enjoy the classic taste of kangkong chips with our original flavor.</p>
-                <p>Price: $5.99</p>
+                <h4>Product Specifications</h4>
+                <ul>Brand: Kangkong Chips Original</ul>
+                <ul>Country of Origin: Philippines</ul>
+                <ul>Ingredient: Kangkong</ul>
+                <ul>Pack Size: 120KG</ul>
+                <ul>Ships From: Cabanatuan City</ul>
+                <h4>Price: ₱130</h4>
                 <!-- Add more details as needed -->
             </div>
             <div class="modal-footer">
@@ -113,8 +117,13 @@
             </div>
             <div class="modal-body">
                 <img src="../assets/SOUR-CREAM.jpg" class="img-fluid" alt="Sour Cream">
-                <p>Enjoy the Sour Cream taste of kangkong chips with our original flavor.</p>
-                <p>Price: $6.99</p>
+                <h4>Product Specifications</h4>
+                <ul>Brand: Kangkong Chips Original</ul>
+                <ul>Country of Origin: Philippines</ul>
+                <ul>Ingredient: Kangkong</ul>
+                <ul>Pack Size: 120KG</ul>
+                <ul>Ships From: Cabanatuan City</ul>
+                <h4>Price: ₱140</h4>
                 <!-- Add more details as needed -->
             </div>
             <div class="modal-footer">
@@ -135,8 +144,13 @@
             </div>
             <div class="modal-body">
                 <img src="../assets/CHEESE.jpg" class="img-fluid" alt="Cheese">
-                <p>Enjoy the Cheese taste of kangkong chips with our original flavor.</p>
-                <p>Price: $7.99</p>
+                <h4>Product Specifications</h4>
+                <ul>Brand: Kangkong Chips Original</ul>
+                <ul>Country of Origin: Philippines</ul>
+                <ul>Ingredient: Kangkong</ul>
+                <ul>Pack Size: 120KG</ul>
+                <ul>Ships From: Cabanatuan City</ul>
+                <h4>Price: ₱150</h4>
                 <!-- Add more details as needed -->
             </div>
             <div class="modal-footer">
