--- a/wews/Login/Login.html
+++ b/wews/Login/Login.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="Login.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><img src="assets/MSG_logo_b.png" alt="Logo"></a>
+            <a class="navbar-brand" href="index.html"><img src="../assets/logo.png" alt="Logo"></a>
         </div>
     </nav>
 
