--- a/wews/Seller/Seller.html
+++ b/wews/Seller/Seller.html
@@ -11,39 +11,23 @@
 <body class="bg-light">
 
     <!-- Top Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container">
-            <a class="navbar-brand" href="#">Seller Dashboard</a>
-            <div class="navbar-collapse">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            User
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right" id="userName" aria-labelledby="userDropdown">
-                            <a class="dropdown-item" href="#">View Profile</a>
-                            <a class="dropdown-item" href="#">Logout</a>
-                        </div>
-                    </li>
-                </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#"><img src="../assets/logo.png" alt="Logo"></a>
+        <button class="btn btn-outline-light my-2 my-sm-0 ml-auto" data-toggle="modal" data-target="#addProductModal">
+            <i class="fas fa-shopping-cart"></i> Add Product
+        </button>
+        <!-- User Dropdown -->
+        <div class="dropdown ml-2">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="userDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <i class="fas fa-user"></i> User
+            </button>
+            <div class="dropdown-menu">
+                <a class="dropdown-item" href="../UserInfo/UInfo.html">View Profile</a>
+                <div class="dropdown-divider"></div>
+                <a class="dropdown-item" href="#" id="logoutButton">Logout</a>
             </div>
         </div>
     </nav>
-
-    <div class="container mt-5">
-        <div class="card">
-            <div class="card-header bg-primary text-white">
-                <h1 class="mb-0">Seller Dashboard</h1>
-            </div>
-            <div class="card-body">
-                <!-- Button to trigger modal -->
-                <button type="button" class="btn btn-primary mb-3" data-toggle="modal" data-target="#addProductModal">Add Product</button>
-
-                <!-- List to display products -->
-                <ul id="productList" class="list-group"></ul>
-            </div>
-        </div>
-    </div>
 
     <!-- Add Product Modal -->
     <div class="modal" id="addProductModal" tabindex="-1" role="dialog">
