--- a/wews/UserInfo/UInfo.html
+++ b/wews/UserInfo/UInfo.html
@@ -11,7 +11,7 @@
 
     <!-- Bootstrap Top Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">User Info</a>
+        <a class="navbar-brand" href="#"><img src="../assets/logo.png" alt="Logo"></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
