added bg to user inf
sddsadas

--- a/wews/UserInfo/UInfo.html
+++ b/wews/UserInfo/UInfo.html
@@ -15,28 +15,16 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                </li>
-            </ul>
-        </div>
     </nav>
 
-    <!-- User Information Container -->
+  <div class="userinf">
     <div class="container mt-3">
         <div class="row">
             <div class="col-md-4">
-                <img id="user-picture" src="user.jpg" alt="User Picture" class="img-fluid rounded-circle">
+
             </div>
             <div class="col-md-8">
+                <img id="user-picture" src="user.jpg" alt="User Picture" class="img-fluid rounded-circle">
                 <div id="user-details">
                     <p><strong>Full Name:</strong> <span id="fullName"></span></p>
                     <p><strong>Email Address:</strong> <span id="email"></span></p>
@@ -48,6 +36,7 @@
                 </div>
             </div>
         </div>
+    </div>
     </div>
 
     <!-- Edit Modal -->
