miss ko na siya
:(((

--- a/wews/Main/Main.html
+++ b/wews/Main/Main.html
@@ -8,8 +8,6 @@
     <title>Kangkong Chips Shop</title>
 </head>
 <body>
-
-    <!-- Navigation Bar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="#"><img src="../assets/logo.png" alt="Logo"></a>
         <button class="btn btn-outline-light my-2 my-sm-0 ml-auto" data-toggle="modal" data-target="#cartModal">
@@ -173,7 +171,7 @@
                     <ul id="cart-items" class="list-group">
                         <!-- Cart items will be added dynamically -->
                     </ul>
-                    <h5>Total: $<span id="cart-total">0.00</span></h5>
+                    <h5>Total: ₱<span id="cart-total">0.00</span></h5>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-primary checkout" data-dismiss="modal">Checkout</button>
