--- a/wews/Welcome/Welcome.html
+++ b/wews/Welcome/Welcome.html
@@ -11,7 +11,7 @@
 
     <!-- Navigation Bar -->
     <nav class="sticky-top navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">Kangkong Chips Shop</a>
+        <a class="navbar-brand" href="#"><img src="../assets/logo.png" alt="Logo"></a>
 
         <div class="mx-3 " style="position: absolute; right: 0;">
             <a href="../Login/Login.html">
@@ -38,7 +38,7 @@
                     <p>Dive into a world of irresistible snacking with our Kangkong Chips! Impossibly crispy, incredibly flavorful – our chips are a celebration of freshness and crunch. Sourced from the finest kangkong leaves, each chip is a symphony of taste, delivering a unique blend of nature's goodness in every bite. Elevate your snack game with our Kangkong Chips – a guilt-free, wholesome indulgence that turns ordinary moments into extraordinary experiences. 
                         Taste the crunch, savor the delight – it's time to redefine your snacking pleasure</p>
                     
-                    <a href="" class="btn btn-lg btn-primary">Buy Now</a>    
+                    <a href="../Login/Login.html" class="btn btn-lg btn-primary">Buy Now</a>    
                 </div>
             </div>
 
@@ -78,7 +78,7 @@
     <div class="jumbotron text-center my-4">
         <h1 class="display-4">Kangkong Chips</h1>
         <p class="lead">Biting into Green, Tasting the Crisp!</p>
-        <a href="../Main/Main.html" class="btn btn-primary btn-lg my-3">Explore Our Shop</a>
+        <a href="../Login/Login.html" class="btn btn-primary btn-lg my-3">Explore Our Shop</a>
     </div>
 
     <div class="row">
