change product description, added link to carousel

--- a/wews/Welcome/Welcome.html
+++ b/wews/Welcome/Welcome.html
@@ -49,7 +49,7 @@
                     <p>Dive into a world of irresistible snacking with our Kangkong Chips! Impossibly crispy, incredibly flavorful – our chips are a celebration of freshness and crunch. Sourced from the finest kangkong leaves, each chip is a symphony of taste, delivering a unique blend of nature's goodness in every bite. Elevate your snack game with our Kangkong Chips – a guilt-free, wholesome indulgence that turns ordinary moments into extraordinary experiences. 
                         Taste the crunch, savor the delight – it's time to redefine your snacking pleasure</p>
                     
-                    <a href="" class="btn btn-lg btn-primary">Buy Now</a>    
+                    <a href="../Login/Login.html" class="btn btn-lg btn-primary">Buy Now</a>    
                 </div>
             </div>
 
@@ -59,7 +59,7 @@
                     <h1>Kangkong Chips</h1>
                     <p>Dive into a world of irresistible snacking with our Kangkong Chips! Impossibly crispy, incredibly flavorful – our chips are a celebration of freshness and crunch. Sourced from the finest kangkong leaves, each chip is a symphony of taste, delivering a unique blend of nature's goodness in every bite. Elevate your snack game with our Kangkong Chips – a guilt-free, wholesome indulgence that turns ordinary moments into extraordinary experiences. 
                         Taste the crunch, savor the delight – it's time to redefine your snacking pleasure</p>
-                    <a href="" class="btn btn-lg btn-primary">Buy Now</a>    
+                    <a href="../Login/Login.html" class="btn btn-lg btn-primary">Buy Now</a>    
                 </div>
             </div>
         </div>
@@ -170,8 +170,10 @@
                         <img src="../assets/SOUR-CREAM.jpg" class="card-img-top" alt="Kangkong Chip 1">
                         <div class="card-body">
                             <h2 class="card-title">Sour Cream</h2>
-                            <p class="card-text">Dive into the perfect harmony of crispiness and cheesy goodness with our Kangkong Chips in Cheese Flavor. 
-                                Elevate your snacking with nature's crunch, now with a delectable touch of real cheese.</p>
+                            <p class="card-text">
+                                Experience the tangy bliss of our Kangkong Chips in Sour Cream Flavor. 
+                                Crispy perfection meets bold flavor, elevating your snacking to new heights.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -181,8 +183,8 @@
                         <div class="card-body">
                             <h2 class="card-title">Cheese</h2>
                             <p>
-                                Experience the tangy bliss of our Kangkong Chips in Sour Cream Flavor. 
-                                Crispy perfection meets bold flavor, elevating your snacking to new heights.                         
+                                Dive into the perfect harmony of crispiness and cheesy goodness with our Kangkong Chips in Cheese Flavor. 
+                                Elevate your snacking with nature's crunch, now with a delectable touch of real cheese.
                             </p>
                         </div>
                     </div>
