--- a/wews/Main/Main.html
+++ b/wews/Main/Main.html
@@ -17,9 +17,9 @@
 
         <!-- User Dropdown -->
         <div class="dropdown ml-2">
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="userDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fas fa-user"></i> User
-            </button>
+           <button class="btn btn-secondary dropdown-toggle" type="button" id="userDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <i class="fas fa-user"></i>
+    </button>
             <div class="dropdown-menu">
                 <a class="dropdown-item" href="../UserInfo/UInfo.html">View Profile</a>
                 <div class="dropdown-divider"></div>
